--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
+lxml==4.5.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.0
@@ -49,6 +50,7 @@ numpy==1.18.1
 oauthlib==3.1.0
 opt-einsum==3.2.0
 pandas==1.0.1
+pandas-datareader==0.8.1
 pandocfilters==1.4.2
 parso==0.6.2
 patsy==0.5.1
