--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ bleach==3.1.1
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
-chow-test==1.0
+git+https://github.com/jtloong/chow-test.git
 cycler==0.10.0
 Cython==0.29.15
 decorator==4.4.2
@@ -17,10 +17,12 @@ gast==0.2.2
 google-auth==1.11.2
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
+graphviz==0.13.2
 grpcio==1.27.2
 h5py==2.10.0
 idna==2.9
 importlib-metadata==1.5.0
+investpy==0.9.14
 ipykernel==5.1.4
 ipython==7.13.0
 ipython-genutils==0.2.0
@@ -37,12 +39,14 @@ Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
+lightgbm==2.3.1
 littleutils==0.2.2
 lxml==4.5.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.0
 mistune==0.8.4
+multitasking==0.0.9
 nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
@@ -88,15 +92,13 @@ Send2Trash==1.5.0
 six==1.14.0
 sklearn==0.0
 statsmodels==0.11.1
-tensorboard==2.1.1
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
 tqdm==4.43.0
 traitlets==4.3.3
+Unidecode==1.1.1
 urllib3==1.25.8
 wcwidth==0.1.8
 webencodings==0.5.1
@@ -104,5 +106,7 @@ Werkzeug==1.0.0
 widgetsnbextension==3.5.1
 wrapt==1.12.0
 xarray==0.15.1
+xgboost==1.0.2
 xlrd==1.2.0
+yfinance==0.1.54
 zipp==3.1.0
